# primeminister

./: .gitignore  LICENSE  Makefile  README.md  example_json_usage.py  example_usage.py
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/workflows/: security.yml  test.yml
src/: pyproject.toml  setup.py
src/primeminister/: __init__.py  cli.py  config.json  config_manager.py  core.py  logger.py
src/tests/: __init__.py  conftest.py  test_basic.py  test_cli.py  test_config_manager.py  test_core.py  test_logger.py
