[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "primeminister"
version = "1.0.0"
description = "An AI CLI tool that uses a council of AI personalities to provide well-rounded advice"
readme = "README.md"
authors = [
    {name = "Eric Benner", email = "ebennerit@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["ai", "cli", "decision-making", "openai", "gpt", "council", "advice"]
dependencies = [
    "openai>=1.0.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/eb3095/primeminister"
"Bug Reports" = "https://github.com/eb3095/primeminister/issues"
"Source" = "https://github.com/eb3095/primeminister"
"Documentation" = "https://github.com/eb3095/primeminister/blob/main/README.md"

[project.scripts]
primeminister = "primeminister.cli:main"
pm = "primeminister.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["primeminister*"]

[tool.setuptools.package-data]
primeminister = ["config.json"]